Alignment corrections

--- a/Gun_Violence/static/css/stylez.css
+++ b/Gun_Violence/static/css/stylez.css
@@ -10,7 +10,7 @@
     position: relative;
     width: 3600px;
     animation-name: George;
-    animation-duration: 30s;
+    animation-duration: 25s;
     animation-iteration-count: infinite;
     ani
 }
